# patternq

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: variant_analysis.ipynb
patternq/: dataset.py  helpers.py  query.py  reference.py  schema.py  trino.py
sql/: trino_queries.sql
tests/: livedev.py
