[tool.poetry]
name = "patternq"
version = "0.1.0"
description = ""
authors = ["Benjamin Kamphaus <ben@vendekagonlabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
requests = ">=2.26.0"
presto-python-client = ">=0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

